Fix text align

--- a/frontend/src/components/Pages/MainPage/MainPage.css
+++ b/frontend/src/components/Pages/MainPage/MainPage.css
@@ -25,6 +25,7 @@
   font-weight: 600;
 
   margin: 20px;
+  text-align: center;
 }
 
 .mainpage div {
